<resources>
    <string name="app_name">Task3part2</string>

    //button
    <string name="guess">Guess</string>
    <string name="clear">Clear</string>
    <string name="restart">Restart</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>

    <string name="enter_your_guess">Enter your guess</string>
    <string name="game_result_won">You won!</string>
    <string name="game_result_try_again">Try again.</string>
    <string name="invalid_value">Invalid Value</string>


</resources>